2009-12-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspgetworkarea.c: Add debug printk's.
	* startup/linkcmds: Using "-Wl,--defsym -Wl,RamSize=0x1000000"
	results in _RamSize being defined.  Handle this properly.



2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: BSP should not define
	CONFIGURE_NUMBER_OF_TERMIOS_PORTS.

2009-11-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ne2000/ne2000.c: Logic on defaulting port number was inverted when
	adding command line arguments.

2009-11-05	Till Straumann <strauman@slac.stanford.edu>

	* console/console.c: Fixed compiler warning.

2009-11-05	Till Straumann <strauman@slac.stanford.edu>

	* start/start.S, console/console.c: Separated code
	that switched console and printk port based on info
	gathered from the commandline and/or a BSP provided
	routine into new BSP_console_select() which is called
	from 'start.S' so that early messages make it to the
	redirected printk port.

2009-10-28	Till Straumann <strauman@slac.stanford.edu>

	* start/start.S: Make sure initial stack is aligned
	to CPU_STACK_ALIGNMENT before calling C-code.

2009-10-27	Till Straumann <strauman@slac.stanford.edu>

	* include/bsp.h, console/console.c: Provide weak-alias
	hook so that the application may choose the console.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/pc386.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Chris Johns <chrisj@rtems.org>

	* ne2000/ne2000.c: Add --ne2k-irq and --ne2k-port boot command
	line configure options.

	* ide/ide.c: Fix a bug which left 4 words in the buffer of the
	disk. Some devices do not follow the standard and terminate the
	command which a new command occurs and/or low data ready when data
	is still to be read.
	
2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/pc386.cfg: New (relocated from /make/custom).